working/sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysample-service
spec:
  type: NodePort
  selector:
    app: mysample
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31514
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysample-deployment
  labels:
    app: mysample
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mysample
  template:
    metadata:
      labels:
        app: mysample
    spec:
      containers:
      - name: mysample
        image: gcr.io/google-samples/node-hello:1.0
        ports:
        - containerPort: 80
