working/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mysample-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
   - http:
      paths:
      - path: /
        backend:
          serviceName: mysample-service
          servicePort: 80
